# nxtgm

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE_LIBRARY  LICENSE_PLUGINS  LICENSE_PLUGINS.md  README.md  emscripten_python_build.sh  environment.yml  environment_wasm_build.yml  environment_wasm_python.yml  environment_wasm_xpython.yml  environment_win.yml  nxtgmConfig.cmake.in  package.json  tsconfig.json
javascript/: CMakeLists.txt  build_emscripten.sh  build_emscripten_npm.sh  environment.yml
javascript/src/: callback.hpp  convert.cpp  convert.hpp  export_callbacks.cpp  export_functions.cpp  export_gm.cpp  export_nxtgm.cpp  export_optimizers.cpp  export_proposal_gen.cpp  export_space.cpp  post_js.js  proposal_gen.cpp  proposal_gen.hpp
javascript/ts_src/: index.ts  nxtgm.spec.ts  nxtgm_javascript_runtime.d.ts
python/: CMakeLists.txt
python/examples/: README.rst  plot_hello_world.py  plot_table.py  table2.py
python/module/nxtgm/: __init__.py
python/notebooks/: table.ipynb  wedding_table.ipynb
python/src/nxtgm/: export_nxtgm.cpp
python/src/nxtgm/constraint_functions/: export_discrete_constraint_functions.cpp
python/src/nxtgm/energy_functions/: export_discrete_energy_functions.cpp
python/src/nxtgm/functions/: export_discrete_constraint_functions.cpp  export_discrete_energy_functions.cpp
python/src/nxtgm/models/: export_solution_value.cpp
python/src/nxtgm/models/gm/: export_discrete_gm.cpp
python/src/nxtgm/optimizers/gm/discrete/: export_discrete_gm_optimizers.cpp
python/src/nxtgm/plugins/: export_proposal_gen.cpp
python/src/nxtgm/spaces/: export_discrete_space.cpp
python/tests/: conftest.py  test_nxtgm.py  testmodels.py
src/nxtgm/plugins/: CMakeLists.txt  plugin_registry.cpp
src/nxtgm/plugins/assignment/: CMakeLists.txt  assignment_base.cpp
src/nxtgm/plugins/assignment/greedy/: CMakeLists.txt  assignment_queue.hpp  greedy.cpp  indexed_heap_queue.hpp
src/nxtgm/plugins/discrete_gm_optimizer/: CMakeLists.txt  belief_propagation.cpp  brute_force_naive.cpp  chained_optimizers.cpp  dynamic_programming.cpp  graph_cut.cpp  hqpbo.cpp  icm.cpp  ilp_highs.cpp  matching_icm.cpp  qpbo.cpp  reduced_gm_optimizer.cpp
src/nxtgm/plugins/discrete_gm_optimizer/acims/: CMakeLists.txt  acims.cpp
src/nxtgm/plugins/discrete_gm_optimizer/belief_propagation/: CMakeLists.txt  belief_propagation.cpp
src/nxtgm/plugins/discrete_gm_optimizer/brute_force_naive/: CMakeLists.txt  brute_force_naive.cpp
src/nxtgm/plugins/discrete_gm_optimizer/chained_optimizers/: CMakeLists.txt  chained_optimizers.cpp
src/nxtgm/plugins/discrete_gm_optimizer/dynamic_programming/: CMakeLists.txt  dynamic_programming.cpp
src/nxtgm/plugins/discrete_gm_optimizer/fusion_moves/: CMakeLists.txt  fusion_moves.cpp
src/nxtgm/plugins/discrete_gm_optimizer/graph_cut/: CMakeLists.txt  graph_cut.cpp
src/nxtgm/plugins/discrete_gm_optimizer/hqpbo/: CMakeLists.txt  hqpbo.cpp
src/nxtgm/plugins/discrete_gm_optimizer/hungarian_matching/: CMakeLists.txt  hungarian_matching.cpp
src/nxtgm/plugins/discrete_gm_optimizer/hungarian_matching/hungarian-algorithm-cpp/: Hungarian.cpp  Hungarian.h
src/nxtgm/plugins/discrete_gm_optimizer/icm/: CMakeLists.txt  icm.cpp
src/nxtgm/plugins/discrete_gm_optimizer/ilp_based/: CMakeLists.txt  ilp_based.cpp
src/nxtgm/plugins/discrete_gm_optimizer/ilp_highs/: CMakeLists.txt  ilp_highs.cpp
src/nxtgm/plugins/discrete_gm_optimizer/matching_icm/: CMakeLists.txt  matching_icm.cpp
src/nxtgm/plugins/discrete_gm_optimizer/qpbo/: CMakeLists.txt  qpbo.cpp
src/nxtgm/plugins/discrete_gm_optimizer/reduced_gm_optimizer/: CMakeLists.txt  reduced_gm_optimizer.cpp
src/nxtgm/plugins/hocr/: CMakeLists.txt  hocr_base.cpp
src/nxtgm/plugins/hocr/fix/: CMakeLists.txt  hocr_fix.cpp
src/nxtgm/plugins/hocr/fix/higher_order_energy/: clique.hpp  higher-order-energy.hpp  higher-order.hpp  quadratic-rep.hpp
src/nxtgm/plugins/ilp/: CMakeLists.txt  ilp_base.cpp
src/nxtgm/plugins/ilp/coin_clp/: CMakeLists.txt  coin_clp.cpp
src/nxtgm/plugins/ilp/coin_clp/cmake/: FindCLP.cmake
src/nxtgm/plugins/ilp/highs/: CMakeLists.txt  highs.cpp
src/nxtgm/plugins/ilp/highs/cmake/: findHIGHS.cmake
src/nxtgm/plugins/min_st_cut/: CMakeLists.txt  min_st_cut_base.cpp
src/nxtgm/plugins/min_st_cut/boost_boykov_kolmogorov/: CMakeLists.txt  boost_boykov_kolmogorov.cpp
src/nxtgm/plugins/min_st_cut/kolmogorov/: CMakeLists.txt  min_st_cut_kolmogorov.cpp
src/nxtgm/plugins/proposal_gen/: CMakeLists.txt  proposal_gen_base.cpp
src/nxtgm/plugins/proposal_gen/alpha_expansion/: CMakeLists.txt  alpha_expansion.cpp
src/nxtgm/plugins/proposal_gen/matching_bp/: CMakeLists.txt  matching_bp.cpp
src/nxtgm/plugins/proposal_gen/matchmaker/: CMakeLists.txt  matchmaker.cpp
src/nxtgm/plugins/proposal_gen/optimizer_based/: CMakeLists.txt  optimizer_based.cpp
src/nxtgm/plugins/proposal_gen/random/: CMakeLists.txt  random.cpp
src/nxtgm/plugins/proposal_gen/swapper/: CMakeLists.txt  swapper.cpp
src/nxtgm/plugins/proposal_gen/testing/: CMakeLists.txt  testing.cpp
src/nxtgm/plugins/qpbo/: CMakeLists.txt  qpbo_base.cpp
src/nxtgm/plugins/qpbo/kolmogorov/: CMakeLists.txt  qpbo_kolmogorov.cpp
tests/: CMakeLists.txt  discrete_function_tester.hpp  discrete_gm_optimizer_tester.hpp  nxtgm_test_common.cpp  nxtgm_test_common.hpp  progressbar.hpp  test.hpp  test_version.cpp  testmodels.hpp
tests/constraint_functions/: test_discrete_constraints.cpp
tests/energy_functions/: test_discrete_energy_functions.cpp
tests/functions/: test_discrete_constraints.cpp  test_discrete_energy_functions.cpp
tests/models/: test_solution_value.cpp
tests/models/gm/: test_discrete_gm.cpp
tests/optimizers/: test_optimizer_parameters.cpp
tests/optimizers/gm/discrete/: test_belief_propagation.cpp  test_brute_force_naive.cpp  test_dynamic_programming.cpp  test_graph_cut.cpp  test_icm.cpp  test_ilp_highs.cpp  test_matching_icm.cpp  test_optimizers.cpp  test_qpbo.cpp
tests/plugins/: test_ilp.cpp
tests/spaces/: test_space.cpp
tests/utils/: test_sparse_array.cpp  test_uany.cpp
(+160 files in other folders)
