if(BUILD_PLUGINS_DISCRETE_GM_OPTIMIZER)
    add_subdirectory(dynamic_programming)
    add_subdirectory(graph_cut)
    add_subdirectory(icm)
    add_subdirectory(qpbo)
    add_subdirectory(hqpbo)
    add_subdirectory(chained_optimizers)
    add_subdirectory(reduced_gm_optimizer)
    add_subdirectory(brute_force_naive)
    add_subdirectory(belief_propagation)
    add_subdirectory(fusion_moves)
    # we need to skip this for win
    if(NOT WIN32)
        add_subdirectory(ilp_based)
    endif()
endif()
